--- a/public/upload/property/856/155x112/1522393928_856_khÃ¡ch - Copy.html
+++ b/public/upload/property/856/155x112/1522393928_856_khÃ¡ch - Copy.html
@@ -129,7 +129,7 @@
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5457034c4bb05c12" async="async"></script>    <!-- <a style="display: none" href="http://pagerank.chromefans.org" target=_blank title="Online PageRank Checker, PageRank Checker for Chrome"><img src="http://pr.chromefans.org/?u=799b471c96babaa0a911d618527621d3&amp;style=3" ALT="PageRank Checker" STYLE="border:0px"></a> -->
 </head>
 <body>
-    <div class="project_item" style="display: none;"><ul><li ><a href="http://muanhadatquan12.com/site/danhsach?project_slug=khu-biet-thu-nha-pho-cao-cap-tai-quan-12">KHU BIỆT THỰ, NHÀ PHỐ CAO CẤP TẠI QUẬN 12</a></li></ul></div>    <div class="new_item" style="display: none;"><ul><li ><a href="http://muanhadatquan12.com/danh-sach-tin-tuc/kien-thuc-nha-dat">KIẾN THỨC NHÀ ĐẤT</a></li><li ><a href="http://muanhadatquan12.com/danh-sach-tin-tuc/tin-tuc-nha-dat">TIN TỨC NHÀ ĐẤT</a></li></ul></div>
+    <div class="project_item" style="display: none;"><ul><li ><a href="/site/danhsach?project_slug=khu-biet-thu-nha-pho-cao-cap-tai-quan-12">KHU BIỆT THỰ, NHÀ PHỐ CAO CẤP TẠI QUẬN 12</a></li></ul></div>    <div class="new_item" style="display: none;"><ul><li ><a href="http://muanhadatquan12.com/danh-sach-tin-tuc/kien-thuc-nha-dat">KIẾN THỨC NHÀ ĐẤT</a></li><li ><a href="http://muanhadatquan12.com/danh-sach-tin-tuc/tin-tuc-nha-dat">TIN TỨC NHÀ ĐẤT</a></li></ul></div>
     <div class="bigmain">
         <header>
             <div class="container">
